#42 - p cores only - no HT no e cores